--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -19,6 +19,11 @@
     "": "",
     "": ""
   },
+  "home": "Home",
+  "wallet": "Wallet",
+  "promotion": "Promotion",
+  "sponsors": "Sponsors",
+  "my_account": "My Account",
   "universal_page": {
     "Malaysia": "Malaysia",
     "Singapore": "Singapore",
@@ -86,6 +91,7 @@
     "": ""
   },
   "world_up_page": {
+    "header": "World Cup Penalty Shoot",
     "top_banner": "<img src=\"assets/images/world-cup/en/BANNERTOP.jpg\" />",
     "how_to_play": "How To Play",
     "YOUR_PRIZE_HISTORY": "YOUR PRIZE HISTORY",
@@ -106,7 +112,7 @@
     "rule_of_activity__top_img2": "<img src=\"assets/images/world-cup/en/067d3e8beb6c4ab880996f388216a530.png\" />",
     "rule_of_activity__content1": "<img src=\"assets/images/world-cup/en/954f4f3d846044d4800914568663439b.png\" />",
     "rule_of_activity__content2": "1. During the event, the inviter will share the invitation link or QR code to the friend, and the friend will become the invitee after successful registration. If the number of friends invited by the invitee in the week and the total valid turnover of the invited friends meets the event requirements, and the invited friends are active for more than 5 days in the week, they can contact the event specialist to apply for a bonus of up to 10,000 yuan;<br/>Example 1: After a member invites 3 friends from November 21st to November 27th, and the 3 friends have accumulated a total of 100,000 valid sports turnover for the week, the member can contact the event specialist to apply for a 10,000 yuan package compensation bonus.<br/>Example 2: After a member invites 5 friends from November 21st to November 27th, and the total effective turnover of the real person in the week is 500,000, the member can contact the event specialist to receive 2 times the bonus of 10,000 yuan.<br/>Example 3: After a member invites 4 friends from November 21st to November 27th, the accumulated effective turnover of the real person in the week is 150,000, and the sports turnover is 70,000, then the member can contact the event specialist and receive a 5,000 yuan package compensation bonus once.<br/>2. The valid turnover of the week, of which the real turnover is limited to the Opel Reality Arena and the AG Reality Arena;<br/>3. How to apply: This event is only applicable to invitees who join the group to participate. Click \"Exclusive Customer Service\" on the event page to contact the exclusive customer service to apply. The bonus in this event can be withdrawn with 1 times the turnover, and the bonus will be void if it is overdue;<br/>4. The valid bets of this event are only calculated for the bet amount that has been settled and has resulted in winning or losing results. Any bets that have been settled in advance, and cancelled events will not be counted as valid bets. Anything lower than the European handicap 1.80 or the Asian handicap Betting on 0.80 water level and betting on the same match in the same event will not be counted as valid bets;<br/>5. The game account with the same mobile phone number, name, email address, bank card number and other information can only participate once. If there are violators, they will not enjoy this bonus;<br/>6. If the member uses all abnormal betting and arbitrage behaviors, the company will reserve the right to freeze the account profit and balance;<br/>7. In order to avoid differences in text understanding, Opel Entertainment reserves the right of final interpretation of this event.",
-    "": "",
+    "next": "Next",
     "": "",
     "": "",
     "": "",
