--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -92,7 +92,8 @@
   },
   "world_up_page": {
     "header": "World Cup Penalty Shoot",
-    "top_banner": "<img src=\"assets/images/world-cup/en/BANNERTOP.jpg\" />",
+    "top_banner": "<img src=\"assets/images/world-cup/zh/BANNER-TOP.jpg\" />",
+    "top_banner_mobile": "<img src=\"assets/images/world-cup/en/mobile-banner.jpeg\" />",
     "how_to_play": "How To Play",
     "YOUR_PRIZE_HISTORY": "YOUR PRIZE HISTORY",
     "Date": "Date",
