--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -99,13 +99,19 @@
     "Date": "Date",
     "Realbet": "Realbet",
     "PENALTY_KICKS_MINI_GAMES_T_C": "PENALTY KICKS MINI GAMES T&C",
-    "PENALTY_KICKS_MINI_GAMES_T_C__description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
+    "PENALTY_KICKS_MINI_GAMES_T_C__description": "All OB members are entitled to participate and play in this Mini Game. Promotion period starts from 19st Nov 2022 12:00:00 (GMT+8) until 18th Dec 2022 23:59:59 (GMT+8).",
     "How_to_Claim": "How to Claim",
-    "How_to_Claim__description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry",
+    "How_to_Claim__description": "To redeem the mini game ticket, members are required to make a single minimum deposit of MYR100 to get 1 ticket.",
     "Rules": "Rules",
-    "Rules__description1": "1. L In order to claim these Mini Games tickets, the deposit amount must be a sinole minimum of S60100 or above.",
-    "Rules__description2": "2. Unce you have redeemed the Mini games tickets, you have to choose 1 out of 2 Penalty kicks and claim the Cash Prizes. All orizes will be credited to the laver's account automatically within 60 seconds",
-    "Rules__description3": "3. You are required to make a bet amount of I tin can be made floallurnaver Ilimes ofthe bonus <br/> Example: <br/> Mini Game Bonus: S60 699 Required Bet Amount • S60 699 x1 • 560 69",
+    "Rules__description1": "1. In order to claim these Mini Games tickets, the deposit amount must be a single minimum of MYR100 or above. Members are allowed to obtain a maximum of five (5) Mini Game Tickets per day.",
+    "Rules__description2": "2. Once you have redeemed the Mini games tickets, you have to choose 1 out of 2 Penalty kicks and claim the Cash Prizes. All prizes will be credited to the player's account automatically within 60 seconds.",
+    "Rules__description3": "3. You are required to make a bet amount of 1 time before withdrawal can be made. (Total turnover 1 times of the bonus)<br/>Example:<br/>Mini Game Bonus: MYR999<br/>Required Bet Amount = MYR999 x 1 = MYR999",
+    "Rules__description4": "4. The Mini Game's ticket is only available from 19st Nov 2022 12:00:00 (GMT+8) until 18th Dec 2022 23:59:59 (GMT+8) and will expire on 19th Dec 2022 00:00:00 (GMT+8)",
+    "Rules__description5": "5.Members must use all tickets before the expiration date",
+    "Rules__description6": "6. This promotion cannot be used in conjunction with other OB promotions.",
+    "Rules__description7": "7. OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
+    "Rules__description8": "8. Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
+    "Rules__description9": "9. General OB Terms & Conditions apply.",
     "ticket_remaining": "Ticket Remaining:",
     "Tap_to_play_now": "Tap to Play Now",
     "rule_of_activity": "Rule Of Activity",
