--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -92,7 +92,7 @@
   },
   "world_up_page": {
     "header": "World Cup Penalty Shoot",
-    "top_banner": "<img src=\"assets/images/world-cup/zh/BANNER-TOP.jpg\" />",
+    "top_banner": "<img src=\"assets/images/world-cup/en/BANNERTOP.jpg\" />",
     "top_banner_mobile": "<img src=\"assets/images/world-cup/en/mobile-banner.jpeg\" />",
     "how_to_play": "How To Play",
     "YOUR_PRIZE_HISTORY": "YOUR PRIZE HISTORY",
@@ -113,15 +113,55 @@
     "Rules__description8": "8. Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
     "Rules__description9": "9. General OB Terms & Conditions apply.",
     "ticket_remaining": "Ticket Remaining:",
-    "Tap_to_play_now": "Tap to Play Now",
-    "rule_of_activity": "Rule Of Activity",
-    "rule_of_activity__top_img1": "<img src=\"assets/images/world-cup/en/f5159537341d4e8a98ab234ce3595c7a.png\" />",
-    "rule_of_activity__top_img2": "<img src=\"assets/images/world-cup/en/067d3e8beb6c4ab880996f388216a530.png\" />",
-    "rule_of_activity__content1": "<img src=\"assets/images/world-cup/en/954f4f3d846044d4800914568663439b.png\" />",
-    "rule_of_activity__content2": "1. During the event, the inviter will share the invitation link or QR code to the friend, and the friend will become the invitee after successful registration. If the number of friends invited by the invitee in the week and the total valid turnover of the invited friends meets the event requirements, and the invited friends are active for more than 5 days in the week, they can contact the event specialist to apply for a bonus of up to 10,000 yuan;<br/>Example 1: After a member invites 3 friends from November 21st to November 27th, and the 3 friends have accumulated a total of 100,000 valid sports turnover for the week, the member can contact the event specialist to apply for a 10,000 yuan package compensation bonus.<br/>Example 2: After a member invites 5 friends from November 21st to November 27th, and the total effective turnover of the real person in the week is 500,000, the member can contact the event specialist to receive 2 times the bonus of 10,000 yuan.<br/>Example 3: After a member invites 4 friends from November 21st to November 27th, the accumulated effective turnover of the real person in the week is 150,000, and the sports turnover is 70,000, then the member can contact the event specialist and receive a 5,000 yuan package compensation bonus once.<br/>2. The valid turnover of the week, of which the real turnover is limited to the Opel Reality Arena and the AG Reality Arena;<br/>3. How to apply: This event is only applicable to invitees who join the group to participate. Click \"Exclusive Customer Service\" on the event page to contact the exclusive customer service to apply. The bonus in this event can be withdrawn with 1 times the turnover, and the bonus will be void if it is overdue;<br/>4. The valid bets of this event are only calculated for the bet amount that has been settled and has resulted in winning or losing results. Any bets that have been settled in advance, and cancelled events will not be counted as valid bets. Anything lower than the European handicap 1.80 or the Asian handicap Betting on 0.80 water level and betting on the same match in the same event will not be counted as valid bets;<br/>5. The game account with the same mobile phone number, name, email address, bank card number and other information can only participate once. If there are violators, they will not enjoy this bonus;<br/>6. If the member uses all abnormal betting and arbitrage behaviors, the company will reserve the right to freeze the account profit and balance;<br/>7. In order to avoid differences in text understanding, Opel Entertainment reserves the right of final interpretation of this event.",
+    "Term_Conditions": "Term & Conditions",
+    "Term_Conditions__top_img1": "<img src=\"assets/images/world-cup/en/f5159537341d4e8a98ab234ce3595c7a.png\" />",
+    "Term_Conditions__top_img2": "<img src=\"assets/images/world-cup/en/067d3e8beb6c4ab880996f388216a530.png\" />",
+    "Term_Conditions__title": "<img src=\"assets/images/world-cup/en/event-detials.png\" />",
     "next": "Next",
-    "": "",
-    "": "",
+    "Term_Conditions__item__title1": "Audience:",
+    "Term_Conditions__item__content1": "All OB Members",
+    "Term_Conditions__item__title2": "Event Time:",
+    "Term_Conditions__item__content2": "FIFA WORLD CUP PERIOD",
+    "Term_Conditions__item__title3": "",
+    "Term_Conditions__item__content3": "During FIFA WORLD CUP period , bet on any sports and esport match . Enjoy the special rewards !",
+    "PLATFORM": "PLATFORM",
+    "REALBET_AMOUNT": "REALBET AMOUNT",
+    "WEEKLY_REALBET_BONUS": "WEEKLY REALBET BONUS",
+    "SPORTS_ESPORTS": "SPORTS / ESPORTS",
+    "Term_Conditions__description1": "This promotion realbet only available for any Sports or Esports during FIFA WORLD CUP period.",
+    "Term_Conditions__description2": "This weekly realbet is counted from Monday 00.00am to Sunday 11.59pm.",
+    "Term_Conditions__description3": "Once member archive the realbet required , member can contact our Livechat to redeem the bonus.",
+    "Term_Conditions__description4": "Member are required turnover x3 before withdrawal this bonus.",
+    "Term_Conditions__description5": "Member are only able to claim bonus one times per week.",
+    "Term_Conditions__description6": "This promotion cannot be used in conjunction with other OB promotions.",
+    "Term_Conditions__description7": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
+    "Term_Conditions__description8": "Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
+    "Term_Conditions__description9": "General OB Terms & Conditions apply.",
+    "REALBET_BONUS_banner": "<img src=\"assets/images/world-cup/en/REALBET-BONUS.jpg\" />",
+    "PREDICTION_banner": "<img src=\"assets/images/world-cup/en/PREDICTION.jpg\" />",
+    "PREDICTION__Term_Conditions__item__title1": "Audience:",
+    "PREDICTION__Term_Conditions__item__content1": "All OB Members",
+    "PREDICTION__Term_Conditions__item__title2": "Event Time:",
+    "PREDICTION__Term_Conditions__item__content2": "FIFA WORLD CUP PERIOD",
+    "PREDICTION__Term_Conditions__item__title3": "",
+    "PREDICTION__Term_Conditions__item__content3": "During FIFA WORLD CUP period , deposit and prediction win more rewards!",
+    "DAILY_DEPOSIT": "DAILY DEPOSIT",
+    "EVENT_TYPE": "EVENT TYPE",
+    "PREDICT_WINNING": "PREDICT WINNING",
+    "PREDICT_PRIZE": "PREDICT PRIZE",
+    "PREDICT": "PREDICT",
+    "MATCH": "MATCH",
+    "PREDICTION__Term_Conditions__description1": "Member are only able to choose one event type daily.",
+    "PREDICTION__Term_Conditions__description2": "This event counted deposit amount start from daily 00.00am -11.59pm",
+    "PREDICTION__Term_Conditions__description3": "Once member archive the deposit required , member can contact our Livechat to get the prediction form and fill in.Once hit the prediction wininng member can contact our Livechat to redeem your prizes.",
+    "PREDICTION__Term_Conditions__description4": "Member are required turnover x3 before withdrawal this bonus.",
+    "PREDICTION__Term_Conditions__description5": "This promotion cannot be used in conjunction with other OB promotions.",
+    "PREDICTION__Term_Conditions__description6": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
+    "PREDICTION__Term_Conditions__description7": "Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
+    "PREDICTION__Term_Conditions__description8": "General OB Terms & Conditions apply.",
+    "PENALTY_SHOOT": "PENALTY SHOOT",
+    "WEEKLY_SPORTS_REALBET_BONUS": "WEEKLY SPORTS REALBET BONUS",
+    "DAILY_PREDICTION": "DAILY PREDICTION",
     "": "",
     "": "" 
   },
