update + how to play modal

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -114,9 +114,9 @@
     "Rules__description9": "9. General OB Terms & Conditions apply.",
     "ticket_remaining": "Ticket Remaining:",
     "Term_Conditions": "Term & Conditions",
-    "Term_Conditions__top_img1": "<img src=\"assets/images/world-cup/en/f5159537341d4e8a98ab234ce3595c7a.png\" />",
-    "Term_Conditions__top_img2": "<img src=\"assets/images/world-cup/en/067d3e8beb6c4ab880996f388216a530.png\" />",
-    "Term_Conditions__title": "<img src=\"assets/images/world-cup/en/event-detials.png\" />",
+    "Term_Conditions__top_img1": "<img src=\"assets/images/world-cup/en/DEPOSIT-NOW.png\" />",
+    "Term_Conditions__top_img2": "<img src=\"assets/images/world-cup/en/livechat.png\" />",
+    "Term_Conditions__title": "<img src=\"assets/images/world-cup/en/event-details.png\" />",
     "next": "Next",
     "Term_Conditions__item__title1": "Audience:",
     "Term_Conditions__item__content1": "All OB Members",
@@ -162,6 +162,15 @@
     "PENALTY_SHOOT": "PENALTY SHOOT",
     "WEEKLY_SPORTS_REALBET_BONUS": "WEEKLY SPORTS REALBET BONUS",
     "DAILY_PREDICTION": "DAILY PREDICTION",
+    "Tap_to_play_now": "Tap to start",
+    "how_to_play_title": "How To Play?",
+    "how_to_play_step1__title": "Step 1",
+    "how_to_play_step1__description": "LOGIN or REGISTER an account at B9Casino to participate",
+    "how_to_play_step2__title": "Step 2",
+    "how_to_play_step2__description": "Daily single deposit SGD100 to earn 1 ticket during the event period",
+    "how_to_play_step3__title": "Step 3",
+    "how_to_play_step3__description": "Score the goals to earn cash!",
+    "": "",
     "": "",
     "": "" 
   },
