--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -92,8 +92,8 @@
   },
   "world_up_page": {
     "header": "World Cup Penalty Shoot",
-    "top_banner": "<img src=\"assets/images/world-cup/en/BANNERTOP.jpg\" />",
-    "top_banner_mobile": "<img src=\"assets/images/world-cup/en/mobile-banner.jpeg\" />",
+    "top_banner": "<img src=\"assets/images/world-cup/zh/BANNER-TOP.jpg\" />",
+    "top_banner_mobile": "<img src=\"assets/images/world-cup/zh/BANNER-MOBILE.jpg\" />",
     "how_to_play": "How To Play",
     "YOUR_PRIZE_HISTORY": "YOUR PRIZE HISTORY",
     "Date": "Date",
@@ -114,9 +114,9 @@
     "Rules__description9": "9. General OB Terms & Conditions apply.",
     "ticket_remaining": "Ticket Remaining:",
     "Term_Conditions": "Term & Conditions",
-    "Term_Conditions__top_img1": "<img src=\"assets/images/world-cup/en/f5159537341d4e8a98ab234ce3595c7a.png\" />",
-    "Term_Conditions__top_img2": "<img src=\"assets/images/world-cup/en/067d3e8beb6c4ab880996f388216a530.png\" />",
-    "Term_Conditions__title": "<img src=\"assets/images/world-cup/en/event-detials.png\" />",
+    "Term_Conditions__top_img1": "<img src=\"assets/images/world-cup/zh/DEPOSIT-NOW.png\" />",
+    "Term_Conditions__top_img2": "<img src=\"assets/images/world-cup/zh/LIVECHAT.png\" />",
+    "Term_Conditions__title": "<img src=\"assets/images/world-cup/zh/event-details.png\" />",
     "next": "Next",
     "Term_Conditions__item__title1": "Audience:",
     "Term_Conditions__item__content1": "All OB Members",
@@ -137,8 +137,8 @@
     "Term_Conditions__description7": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
     "Term_Conditions__description8": "Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
     "Term_Conditions__description9": "General OB Terms & Conditions apply.",
-    "REALBET_BONUS_banner": "<img src=\"assets/images/world-cup/en/REALBET-BONUS.jpg\" />",
-    "PREDICTION_banner": "<img src=\"assets/images/world-cup/en/PREDICTION.jpg\" />",
+    "REALBET_BONUS_banner": "<img src=\"assets/images/world-cup/zh/REALBET-BONUS.jpg\" />",
+    "PREDICTION_banner": "<img src=\"assets/images/world-cup/zh/PREDICTION.jpg\" />",
     "PREDICTION__Term_Conditions__item__title1": "Audience:",
     "PREDICTION__Term_Conditions__item__content1": "All OB Members",
     "PREDICTION__Term_Conditions__item__title2": "Event Time:",
@@ -162,6 +162,7 @@
     "PENALTY_SHOOT": "PENALTY SHOOT",
     "WEEKLY_SPORTS_REALBET_BONUS": "WEEKLY SPORTS REALBET BONUS",
     "DAILY_PREDICTION": "DAILY PREDICTION",
+    "Tap_to_play_now": "Tap to start",
     "": "",
     "": "" 
   },
