update + how to play modal

--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -163,6 +163,13 @@
     "WEEKLY_SPORTS_REALBET_BONUS": "WEEKLY SPORTS REALBET BONUS",
     "DAILY_PREDICTION": "DAILY PREDICTION",
     "Tap_to_play_now": "Tap to start",
+    "how_to_play_title": "How To Play?",
+    "how_to_play_step1__title": "Step 1",
+    "how_to_play_step1__description": "LOGIN or REGISTER an account at B9Casino to participate",
+    "how_to_play_step2__title": "Step 2",
+    "how_to_play_step2__description": "Daily single deposit SGD100 to earn 1 ticket during the event period",
+    "how_to_play_step3__title": "Step 3",
+    "how_to_play_step3__description": "Score the goals to earn cash!",
     "": "",
     "": "" 
   },
