--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -170,7 +170,7 @@
     "how_to_play_step2__description": "Daily single deposit SGD100 to earn 1 ticket during the event period",
     "how_to_play_step3__title": "Step 3",
     "how_to_play_step3__description": "Score the goals to earn cash!",
-    "": "",
+    "event_icon": "<img src=\"assets/images/world-cup/en/Icon-Eng.gif\" />",
     "": "",
     "": "" 
   },
