--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -91,85 +91,86 @@
     "": ""
   },
   "world_up_page": {
-    "header": "World Cup Penalty Shoot",
+    "header": "世界杯点球挑战赛",
     "top_banner": "<img src=\"assets/images/world-cup/zh/BANNER-TOP.jpg\" />",
     "top_banner_mobile": "<img src=\"assets/images/world-cup/zh/BANNER-MOBILE.jpg\" />",
-    "how_to_play": "How To Play",
-    "YOUR_PRIZE_HISTORY": "YOUR PRIZE HISTORY",
-    "Date": "Date",
-    "Realbet": "Realbet",
-    "PENALTY_KICKS_MINI_GAMES_T_C": "PENALTY KICKS MINI GAMES T&C",
-    "PENALTY_KICKS_MINI_GAMES_T_C__description": "All OB members are entitled to participate and play in this Mini Game. Promotion period starts from 19st Nov 2022 12:00:00 (GMT+8) until 18th Dec 2022 23:59:59 (GMT+8).",
-    "How_to_Claim": "How to Claim",
-    "How_to_Claim__description": "To redeem the mini game ticket, members are required to make a single minimum deposit of MYR100 to get 1 ticket.",
-    "Rules": "Rules",
-    "Rules__description1": "1. In order to claim these Mini Games tickets, the deposit amount must be a single minimum of MYR100 or above. Members are allowed to obtain a maximum of five (5) Mini Game Tickets per day.",
-    "Rules__description2": "2. Once you have redeemed the Mini games tickets, you have to choose 1 out of 2 Penalty kicks and claim the Cash Prizes. All prizes will be credited to the player's account automatically within 60 seconds.",
-    "Rules__description3": "3. You are required to make a bet amount of 1 time before withdrawal can be made. (Total turnover 1 times of the bonus)<br/>Example:<br/>Mini Game Bonus: MYR999<br/>Required Bet Amount = MYR999 x 1 = MYR999",
-    "Rules__description4": "4. The Mini Game's ticket is only available from 19st Nov 2022 12:00:00 (GMT+8) until 18th Dec 2022 23:59:59 (GMT+8) and will expire on 19th Dec 2022 00:00:00 (GMT+8)",
-    "Rules__description5": "5.Members must use all tickets before the expiration date",
-    "Rules__description6": "6. This promotion cannot be used in conjunction with other OB promotions.",
-    "Rules__description7": "7. OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
-    "Rules__description8": "8. Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
-    "Rules__description9": "9. General OB Terms & Conditions apply.",
-    "ticket_remaining": "Ticket Remaining:",
-    "Term_Conditions": "Term & Conditions",
+    "how_to_play": "游戏教学",
+    "YOUR_PRIZE_HISTORY": "您的获奖记录",
+    "Date": "日期",
+    "Realbet": "有效投注额",
+    "PENALTY_KICKS_MINI_GAMES_T_C": "点球挑战赛活动规则",
+    "PENALTY_KICKS_MINI_GAMES_T_C__description": "所有欧宝会员都有权参与这个小游戏。活动日期为 2022 年 11 月 19 日 12:00:00 (GMT+8) 至 2022 年 12 月 18 日 23:59:59 (GMT+8)。",
+    "How_to_Claim": "如何兑换",
+    "How_to_Claim__description": "要兑换小游戏门票，会员必须存入最低单笔存款 MYR100 才能获得 1 张门票。",
+    "Rules": "活动规则",
+    "Rules__description1": "1. 要领取这些小游戏门票，存款金额必须至少为 MYR100 或以上。会员每天最多可获得五 (5) 张小游戏门票。",
+    "Rules__description2": "2. 兑换小游戏门票后，您必须在 2 次点球中选择 1 次并领取现金奖励。所有奖品将在 60 秒内自动存入玩家账户。",
+    "Rules__description3": "3. 提款需先完成1倍流水。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：MYR999<br/>所需投注金额 = MYR999 x 1 = MYR999",
+    "Rules__description4": "4、小游戏门票有效期为2022年11月19日12:00:00（GMT+8）至2022年12月18日23:59:59（GMT+8），有效期至2022年12月19日00:00:00（GMT+8)",
+    "Rules__description5": "5.会员必须在有效期内使用所有门票。",
+    "Rules__description6": "6. 此优惠不可与其他欧宝优惠同时使用。",
+    "Rules__description7": "7. 欧宝保留随时修改、取消、暂停或终止促销和/或更改上述促销条款的权利，恕不另行通知。",
+    "Rules__description8": "8. 参与会员必须接受并遵守上述所有条款以及欧宝网站上载明的所有相关规则和规定。",
+    "Rules__description9": "9. 适用于一般欧宝条款和条件。",
+    "ticket_remaining": "剩余门票：",
+    "Term_Conditions": "条款和条件",
     "Term_Conditions__top_img1": "<img src=\"assets/images/world-cup/zh/DEPOSIT-NOW.png\" />",
     "Term_Conditions__top_img2": "<img src=\"assets/images/world-cup/zh/LIVECHAT.png\" />",
     "Term_Conditions__title": "<img src=\"assets/images/world-cup/zh/event-details.png\" />",
-    "next": "Next",
-    "Term_Conditions__item__title1": "Audience:",
-    "Term_Conditions__item__content1": "All OB Members",
-    "Term_Conditions__item__title2": "Event Time:",
-    "Term_Conditions__item__content2": "FIFA WORLD CUP PERIOD",
+    "next": "下一页",
+    "Term_Conditions__item__title1": "活动对象:",
+    "Term_Conditions__item__content1": "欧宝全体会员",
+    "Term_Conditions__item__title2": "活动时间:",
+    "Term_Conditions__item__content2": "2022世界杯期间",
     "Term_Conditions__item__title3": "",
-    "Term_Conditions__item__content3": "During FIFA WORLD CUP period , bet on any sports and esport match . Enjoy the special rewards !",
-    "PLATFORM": "PLATFORM",
-    "REALBET_AMOUNT": "REALBET AMOUNT",
-    "WEEKLY_REALBET_BONUS": "WEEKLY REALBET BONUS",
-    "SPORTS_ESPORTS": "SPORTS / ESPORTS",
-    "Term_Conditions__description1": "This promotion realbet only available for any Sports or Esports during FIFA WORLD CUP period.",
-    "Term_Conditions__description2": "This weekly realbet is counted from Monday 00.00am to Sunday 11.59pm.",
-    "Term_Conditions__description3": "Once member archive the realbet required , member can contact our Livechat to redeem the bonus.",
-    "Term_Conditions__description4": "Member are required turnover x3 before withdrawal this bonus.",
-    "Term_Conditions__description5": "Member are only able to claim bonus one times per week.",
-    "Term_Conditions__description6": "This promotion cannot be used in conjunction with other OB promotions.",
-    "Term_Conditions__description7": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
-    "Term_Conditions__description8": "Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
-    "Term_Conditions__description9": "General OB Terms & Conditions apply.",
+    "Term_Conditions__item__content3": "在2022世界杯期间，投注任何体育和电子竞技游戏即可享受特别奖励！",
+    "PLATFORM": "游戏平台",
+    "REALBET_AMOUNT": "有效投注额",
+    "WEEKLY_REALBET_BONUS": "每周有效投注额奖金",
+    "SPORTS_ESPORTS": "体育 / 电子竞技",
+    "Term_Conditions__description1": "此活动有效投注额仅适用于2022世界杯期间的任何体育或电子竞技投注。",
+    "Term_Conditions__description2": "此每周有效投注额从周一上午 00.00 到周日晚上 11.59 进行计算。",
+    "Term_Conditions__description3": "一旦会员达到所需的有效投注额，会员可以联系我们的在线客服人员兑换奖金。",
+    "Term_Conditions__description4": "会员在提取此奖金之前需要完成3倍流水要求。",
+    "Term_Conditions__description5": "会员每周只能领取一次红利。",
+    "Term_Conditions__description6": "此优惠不可与其他欧宝优惠同时使用。",
+    "Term_Conditions__description7": "欧宝保留随时修改、取消、暂停或终止促销和/或更改上述促销条款的权利，恕不另行通知。",
+    "Term_Conditions__description8": "参与会员必须接受并遵守上述所有条款以及欧宝网站上所述的所有相关规则和规定。",
+    "Term_Conditions__description9": "适用一般欧宝条款和条件。",
     "REALBET_BONUS_banner": "<img src=\"assets/images/world-cup/zh/REALBET-BONUS.jpg\" />",
     "PREDICTION_banner": "<img src=\"assets/images/world-cup/zh/PREDICTION.jpg\" />",
-    "PREDICTION__Term_Conditions__item__title1": "Audience:",
-    "PREDICTION__Term_Conditions__item__content1": "All OB Members",
-    "PREDICTION__Term_Conditions__item__title2": "Event Time:",
-    "PREDICTION__Term_Conditions__item__content2": "FIFA WORLD CUP PERIOD",
+    "PREDICTION__Term_Conditions__item__title1": "活动对象:",
+    "PREDICTION__Term_Conditions__item__content1": "欧宝全体会员",
+    "PREDICTION__Term_Conditions__item__title2": "活动时间:",
+    "PREDICTION__Term_Conditions__item__content2": "2022世界杯期间",
     "PREDICTION__Term_Conditions__item__title3": "",
-    "PREDICTION__Term_Conditions__item__content3": "During FIFA WORLD CUP period , deposit and prediction win more rewards!",
-    "DAILY_DEPOSIT": "DAILY DEPOSIT",
-    "EVENT_TYPE": "EVENT TYPE",
-    "PREDICT_WINNING": "PREDICT WINNING",
-    "PREDICT_PRIZE": "PREDICT PRIZE",
-    "PREDICT": "PREDICT",
-    "MATCH": "MATCH",
-    "PREDICTION__Term_Conditions__description1": "Member are only able to choose one event type daily.",
-    "PREDICTION__Term_Conditions__description2": "This event counted deposit amount start from daily 00.00am -11.59pm",
-    "PREDICTION__Term_Conditions__description3": "Once member archive the deposit required , member can contact our Livechat to get the prediction form and fill in.Once hit the prediction wininng member can contact our Livechat to redeem your prizes.",
-    "PREDICTION__Term_Conditions__description4": "Member are required turnover x3 before withdrawal this bonus.",
-    "PREDICTION__Term_Conditions__description5": "This promotion cannot be used in conjunction with other OB promotions.",
-    "PREDICTION__Term_Conditions__description6": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
-    "PREDICTION__Term_Conditions__description7": "Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
-    "PREDICTION__Term_Conditions__description8": "General OB Terms & Conditions apply.",
-    "PENALTY_SHOOT": "PENALTY SHOOT",
-    "WEEKLY_SPORTS_REALBET_BONUS": "WEEKLY SPORTS REALBET BONUS",
-    "DAILY_PREDICTION": "DAILY PREDICTION",
-    "Tap_to_play_now": "Tap to start",
-    "how_to_play_title": "How To Play?",
-    "how_to_play_step1__title": "Step 1",
-    "how_to_play_step1__description": "LOGIN or REGISTER an account at B9Casino to participate",
-    "how_to_play_step2__title": "Step 2",
-    "how_to_play_step2__description": "Daily single deposit SGD100 to earn 1 ticket during the event period",
-    "how_to_play_step3__title": "Step 3",
-    "how_to_play_step3__description": "Score the goals to earn cash!",
+    "PREDICTION__Term_Conditions__item__content3": "2022世界杯期间，存款并预测赢得更多奖励！",
+    "DAILY_DEPOSIT": "每日存款",
+    "EVENT_TYPE": "活动类型",
+    "PREDICT_WINNING": "预测获胜",
+    "PREDICT_PRIZE": "预测获胜奖金",
+    "PREDICT": "预测",
+    "MATCH": "场比赛",
+    "PREDICTION__Term_Conditions__description1": "会员每天只能选择一种活动类型。",
+    "PREDICTION__Term_Conditions__description2": "此活动从每天 00.00am -11.59pm 开始计算存款金额",
+    "PREDICTION__Term_Conditions__description3": "一旦会员达到所需的存款金额，会员可以联系我们的在线客服获取预测表格并填写。一旦预测成功，会员可以联系我们的在线客服兑换您的奖品。",
+    "PREDICTION__Term_Conditions__description4": "会员在提款此奖金之前需完成3倍流水要求。",
+    "PREDICTION__Term_Conditions__description5": "此优惠不可与其他欧宝优惠同时使用。",
+    "PREDICTION__Term_Conditions__description6": "欧宝保留随时修改、取消、暂停或终止促销和/或更改上述促销条款的权利，恕不另行通知。",
+    "PREDICTION__Term_Conditions__description7": "参与会员必须接受并遵守上述所有条款以及欧宝网站上所述的所有相关规则和规定。",
+    "PREDICTION__Term_Conditions__description8": "适用一般欧宝条款和条件。",
+    "PENALTY_SHOOT": "点球挑战赛",
+    "WEEKLY_SPORTS_REALBET_BONUS": "每周体育有效投注额奖金",
+    "DAILY_PREDICTION": "每日预测",
+    "Tap_to_play_now": "点击开始",
+    "how_to_play_title": "游戏教学",
+    "how_to_play_step1__title": "步骤1",
+    "how_to_play_step1__description": "在欧宝登录或注册帐户并参与",
+    "how_to_play_step2__title": "步骤2",
+    "how_to_play_step2__description": "活动期间每日单笔存款 MYR100 可赢取 1 张门票",
+    "how_to_play_step3__title": "步骤3",
+    "how_to_play_step3__description": "射球得分并赢取现金！",
+    "event_icon": "<img src=\"assets/images/world-cup/en/Icon-CN.gif\" />",
     "": "",
     "": "" 
   },
