--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -104,10 +104,10 @@
     "How_to_Claim__description": "To redeem the mini game ticket, members are required to make a single minimum deposit of MYR100 to get 1 ticket.",
     "Rules": "Rules",
     "Rules__description1": "1. In order to claim these Mini Games tickets, the deposit amount must be a single minimum of MYR100 or above. Members are allowed to obtain a maximum of five (5) Mini Game Tickets per day.",
-    "Rules__description2": "2. Once you have redeemed the Mini games tickets, you have to choose 1 out of 2 Penalty kicks and claim the Cash Prizes. All prizes will be credited to the player's account automatically within 60 seconds.",
-    "Rules__description3": "3. You are required to make a bet amount of 1 time before withdrawal can be made. (Total turnover 1 times of the bonus)<br/>Example:<br/>Mini Game Bonus: MYR999<br/>Required Bet Amount = MYR999 x 1 = MYR999",
+    "Rules__description2": "2. Once you have redeemed the Mini games tickets, you have to choose 1 out of 2 Penalty kicks shooting direction and claim the Cash Prizes. All prizes will be credited to the player's account automatically within 60 seconds.",
+    "Rules__description3": "3. You are require to meet x1 turnover before withdrawal can be made. (Total turnover 1 times of the bonus)<br/>Example:<br/>Mini Game Bonus: MYR999<br/>Required Bet Amount = MYR999 x 1 = MYR999",
     "Rules__description4": "4. The Mini Game's ticket is only available from 19st Nov 2022 12:00:00 (GMT+8) until 18th Dec 2022 23:59:59 (GMT+8) and will expire on 19th Dec 2022 00:00:00 (GMT+8)",
-    "Rules__description5": "5.Members must use all tickets before the expiration date",
+    "Rules__description5": "5. Members must use all tickets before the expiration date",
     "Rules__description6": "6. This promotion cannot be used in conjunction with other OB promotions.",
     "Rules__description7": "7. OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
     "Rules__description8": "8. Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
@@ -128,10 +128,10 @@
     "REALBET_AMOUNT": "REALBET AMOUNT",
     "WEEKLY_REALBET_BONUS": "WEEKLY REALBET BONUS",
     "SPORTS_ESPORTS": "SPORTS / ESPORTS",
-    "Term_Conditions__description1": "This promotion realbet only available for any Sports or Esports during FIFA WORLD CUP period.",
-    "Term_Conditions__description2": "This weekly realbet is counted from Monday 00.00am to Sunday 11.59pm.",
-    "Term_Conditions__description3": "Once member archive the realbet required , member can contact our Livechat to redeem the bonus.",
-    "Term_Conditions__description4": "Member are required turnover x3 before withdrawal this bonus.",
+    "Term_Conditions__description1": "This promotion accumulated realbet only available for any Sports or Esports during FIFA WORLD CUP period.",
+    "Term_Conditions__description2": "This weekly accumulated realbet is counted from Monday 00.00am to Sunday 11.59pm.",
+    "Term_Conditions__description3": "Once member achive the realbet required , member can contact our Livechat to redeem the bonus.",
+    "Term_Conditions__description4": "Member require x3 turnover before withdraw this bonus.",
     "Term_Conditions__description5": "Member are only able to claim bonus one times per week.",
     "Term_Conditions__description6": "This promotion cannot be used in conjunction with other OB promotions.",
     "Term_Conditions__description7": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
@@ -152,9 +152,9 @@
     "PREDICT": "PREDICT",
     "MATCH": "MATCH",
     "PREDICTION__Term_Conditions__description1": "Member are only able to choose one event type daily.",
-    "PREDICTION__Term_Conditions__description2": "This event counted deposit amount start from daily 00.00am -11.59pm",
-    "PREDICTION__Term_Conditions__description3": "Once member archive the deposit required , member can contact our Livechat to get the prediction form and fill in.Once hit the prediction wininng member can contact our Livechat to redeem your prizes.",
-    "PREDICTION__Term_Conditions__description4": "Member are required turnover x3 before withdrawal this bonus.",
+    "PREDICTION__Term_Conditions__description2": "This event count deposit amount start from daily 00.00am -11.59pm",
+    "PREDICTION__Term_Conditions__description3": "Once member achive the require deposit amount , member can contact our Livechat to get the prediction form and fill in to participate. Once win the prediction, wininng member can contact our Livechat to redeem your prizes.",
+    "PREDICTION__Term_Conditions__description4": "Member require x3 turnover before withdraw this bonus.",
     "PREDICTION__Term_Conditions__description5": "This promotion cannot be used in conjunction with other OB promotions.",
     "PREDICTION__Term_Conditions__description6": "OB reserves the right to modify, cancel, suspend or terminate the promotion and/or change the terms of the said promotion at any time without prior notice.",
     "PREDICTION__Term_Conditions__description7": "Participating members must accept and comply with all the terms mentioned above as well as all relevant rules and regulations stated on the OB website.",
@@ -165,9 +165,9 @@
     "Tap_to_play_now": "Tap to start",
     "how_to_play_title": "How To Play?",
     "how_to_play_step1__title": "Step 1",
-    "how_to_play_step1__description": "LOGIN or REGISTER an account at B9Casino to participate",
+    "how_to_play_step1__description": "LOGIN or REGISTER an account at OB to participate",
     "how_to_play_step2__title": "Step 2",
-    "how_to_play_step2__description": "Daily single deposit SGD100 to earn 1 ticket during the event period",
+    "how_to_play_step2__description": "Daily single deposit MYR100 to earn 1 ticket during the event period",
     "how_to_play_step3__title": "Step 3",
     "how_to_play_step3__description": "Score the goals to earn cash!",
     "event_icon": "<img src=\"assets/images/world-cup/en/Icon-Eng.gif\" />",
