--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -104,8 +104,8 @@
     "How_to_Claim__description": "要兑换小游戏门票，会员必须存入最低单笔存款 MYR100 才能获得 1 张门票。",
     "Rules": "活动规则",
     "Rules__description1": "1. 要领取这些小游戏门票，存款金额必须至少为 MYR100 或以上。会员每天最多可获得五 (5) 张小游戏门票。",
-    "Rules__description2": "2. 兑换小游戏门票后，您必须在 2 次点球中选择 1 次并领取现金奖励。所有奖品将在 60 秒内自动存入玩家账户。",
-    "Rules__description3": "3. 提款需先完成1倍流水。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：MYR999<br/>所需投注金额 = MYR999 x 1 = MYR999",
+    "Rules__description2": "2. 兑换小游戏门票后，您必须在 2 个点球方向中选择 1 个射击方向并领取现金奖励。所有奖品将在 60 秒内自动存入玩家账户。",
+    "Rules__description3": "3. 提款需先完成1倍流水要求。 (总投注量1倍流水)<br/>例子：<br/>小游戏奖金：MYR999<br/>所需投注金额 = MYR999 x 1 = MYR999",
     "Rules__description4": "4、小游戏门票有效期为2022年11月19日12:00:00（GMT+8）至2022年12月18日23:59:59（GMT+8），有效期至2022年12月19日00:00:00（GMT+8)",
     "Rules__description5": "5.会员必须在有效期内使用所有门票。",
     "Rules__description6": "6. 此优惠不可与其他欧宝优惠同时使用。",
@@ -128,8 +128,8 @@
     "REALBET_AMOUNT": "有效投注额",
     "WEEKLY_REALBET_BONUS": "每周有效投注额奖金",
     "SPORTS_ESPORTS": "体育 / 电子竞技",
-    "Term_Conditions__description1": "此活动有效投注额仅适用于2022世界杯期间的任何体育或电子竞技投注。",
-    "Term_Conditions__description2": "此每周有效投注额从周一上午 00.00 到周日晚上 11.59 进行计算。",
+    "Term_Conditions__description1": "此活动累计有效投注额仅适用于2022世界杯期间的任何体育或电子竞技投注。",
+    "Term_Conditions__description2": "此每周累计有效投注额从周一上午 00.00 到周日晚上 11.59 进行计算。",
     "Term_Conditions__description3": "一旦会员达到所需的有效投注额，会员可以联系我们的在线客服人员兑换奖金。",
     "Term_Conditions__description4": "会员在提取此奖金之前需要完成3倍流水要求。",
     "Term_Conditions__description5": "会员每周只能领取一次红利。",
